feat(nix): enhance my workflow

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,7 @@ bind "\\" split-window -h -c "#{pane_current_path}"
 # use \ to create a horizontal pane & start in current dir
 unbind '"'
 bind "-" split-window -v -c "#{pane_current_path}"
+bind e set -g synchronize-panes
 
 bind c   new-window   -c '#{pane_current_path}'
 bind h   select-pane  -L
@@ -66,12 +67,19 @@ bind k   select-pane  -U
 bind l   select-pane  -R
 
 # Appearance
-set -g status-left "#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml) "
-set -g status-right ""
+# set -g status-left "#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml) "
+# set -g status-right ""
 
 set -g status-left-length 300    # increase length (from 10)
-set -g status-position bottom    # macOS / darwin style
+set -g status-position top       # macOS / darwin style
 set -g status-style 'bg=default' # transparent
+
+# set the statusline color (default is transparent, color256)
+set -g status-left-style bg=default,fg=colour207,bold
+set -g status-style bg=default,fg=colour117,bold
+set -g status-right-style bg=default,fg=colour102,bold
+
+set -g status-right "#T"
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
@@ -81,12 +89,12 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @tokyo-night-tmux_show_datetime 0
-set -g @tokyo-night-tmux_show_path 1
-set -g @tokyo-night-tmux_path_format relative
-set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_show_git 0
+# set -g @tokyo-night-tmux_show_datetime 0
+# set -g @tokyo-night-tmux_show_path 1
+# set -g @tokyo-night-tmux_path_format relative
+# set -g @tokyo-night-tmux_window_id_style dsquare
+# set -g @tokyo-night-tmux_window_id_style dsquare
+# set -g @tokyo-night-tmux_show_git 0
 
 set -g window-status-current-format '*#[fg=magenta]#W'
 set -g window-status-format ' #[fg=gray]#W'
@@ -101,7 +109,7 @@ bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
 # List of plugins
 # Use prefix + I -> install the plugins (required install tmp before)
-set -g @plugin "janoamaral/tokyo-night-tmux"
+# set -g @plugin "janoamaral/tokyo-night-tmux"
 
 # Install `tpm` if needed.
 if "test ! -d ~/.tmux/plugins/tpm" \
