chore(tmux): update shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,7 +40,7 @@ bind -r "m" resize-pane -Z
   # reload configuration
 bind -r r source-file ~/.tmux.conf
 
-set-option -g default-shell /run/current-system/sw/bin/fish
+set-option -g default-shell /bin/zsh
 
 bind-key "K" display-popup -E -w 40% "sesh connect \"$(
 	sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
@@ -79,7 +79,7 @@ set -g status-left-style bg=default,fg=colour207,bold
 set -g status-style bg=default,fg=colour117,bold
 set -g status-right-style bg=default,fg=colour102,bold
 
-set -g status-right "#T"
+set -g status-right ""
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
