feat(ui): use tokyo night tmux UI

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,9 +42,11 @@ bind -r r source-file ~/.tmux.conf
 
 set-option -g default-shell /bin/zsh
 
-bind-key "K" display-popup -E -w 40% "sesh connect \"$(
-	sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
-)\""
+# bind-key "K" display-popup -E -w 40% "sesh connect \"$(
+# 	sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+# )\""
+
+# bind -N "⌘+k k9s " g new-window -c "#{pane_current_path}" -n "🌳" "k9s 2> /dev/null"
 
 # setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
@@ -71,15 +73,15 @@ bind l   select-pane  -R
 # set -g status-right ""
 
 set -g status-left-length 300    # increase length (from 10)
-set -g status-position top       # macOS / darwin style
+set -g status-position bottom    # macOS / darwin style
 set -g status-style 'bg=default' # transparent
 
 # set the statusline color (default is transparent, color256)
-set -g status-left-style bg=default,fg=colour207,bold
-set -g status-style bg=default,fg=colour117,bold
-set -g status-right-style bg=default,fg=colour102,bold
+# set -g status-left-style bg=default,fg=colour207,bold
+# set -g status-style bg=default,fg=colour117,bold
+# set -g status-right-style bg=default,fg=colour102,bold
 
-set -g status-right ""
+# set -g status-right ""
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
@@ -89,15 +91,15 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# set -g @tokyo-night-tmux_show_datetime 0
-# set -g @tokyo-night-tmux_show_path 1
-# set -g @tokyo-night-tmux_path_format relative
-# set -g @tokyo-night-tmux_window_id_style dsquare
-# set -g @tokyo-night-tmux_window_id_style dsquare
-# set -g @tokyo-night-tmux_show_git 0
-
 set -g window-status-current-format '*#[fg=magenta]#W'
 set -g window-status-format ' #[fg=gray]#W'
+
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_show_path 1
+set -g @tokyo-night-tmux_path_format relative
+set -g @tokyo-night-tmux_window_id_style dsquare
+set -g @tokyo-night-tmux_window_id_style dsquare
+set -g @tokyo-night-tmux_show_git 0
 
 # Enabled vi keybinding
 setw -g mode-keys vi
@@ -109,7 +111,7 @@ bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
 # List of plugins
 # Use prefix + I -> install the plugins (required install tmp before)
-# set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
 # Install `tpm` if needed.
 if "test ! -d ~/.tmux/plugins/tpm" \
