feat(ui): update tmux bar position

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,7 +73,7 @@ bind l   select-pane  -R
 # set -g status-right ""
 
 set -g status-left-length 300    # increase length (from 10)
-set -g status-position bottom    # macOS / darwin style
+set -g status-position top    # macOS / darwin style
 set -g status-style 'bg=default' # transparent
 
 # set the statusline color (default is transparent, color256)
