--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -15,7 +15,7 @@ semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 [window]
 decorations = "buttonless"
 dynamic_padding = false
-opacity = 0.6
+opacity = 1
 startup_mode = "Windowed"
 
 [window.padding]
@@ -72,7 +72,7 @@ white = "#787c99"
 yellow = "#e0af68"
 
 [colors.primary]
-background = "#1a1b26"
+background = "#24283b"
 foreground = "#a9b1d6"
 
 [cursor]
@@ -85,7 +85,7 @@ thickness = 0.15
 TERM = "xterm-256color"
 
 [font]
-size = 16
+size = 14
 
 [font.glyph_offset]
 x = 0
